--- a/asm1/Assignment 01 (Starter Code)/icon-list.html
+++ b/asm1/Assignment 01 (Starter Code)/icon-list.html
@@ -12,7 +12,7 @@
 	<table style="font-size: 25px;">
         <thead>
             <tr>
-                <th>Icon</th>
+                <th>Icon1</th>
                 <th>Class</th>
             </tr>
         </thead>
